# sail-lsp

./: .gitignore  README.md
.github/workflows/: release.yml
sail_parser/: Cargo.toml
sail_parser/examples/: error_samples.rs
sail_parser/src/: core_ast.rs  full_parser.rs  lexer.rs  lib.rs  parser.rs  queries.rs
sail_server/: Cargo.toml
sail_server/src/: analysis.rs  backend.rs  code_action_utils.rs  code_actions.rs  completion.rs  definitions.rs  diagnostics.rs  file.rs  files.rs  formatting.rs  handlers.rs  hover.rs  inlay_hints.rs  lenses.rs  main.rs  match_check.rs  navigation.rs  rename_utils.rs  semantic_tokens.rs  signature.rs  tests.rs  typecheck.rs
sail_server/src/actions/: mod.rs
sail_server/src/diagnostics/: mod.rs  parse.rs  reporting.rs  semantic.rs  type_error.rs
sail_server/src/hover/: mod.rs  support.rs
sail_server/src/state/: file.rs  files.rs
sail_server/src/symbols/: analysis.rs  lenses.rs  mod.rs  navigation.rs
